# askbrain

./: .gitignore  README.md  pyproject.toml
.github/workflows/: hourly-top-posts.yml
data/: top_posts.json  top_posts_meta.json
src/askbrain/: cli.py  config.py
src/askbrain/clients/: base.py  tilda.py
src/askbrain/models/: feed.py
src/askbrain/services/: top_posts.py
src/askbrain/utils/: json.py
tests/: conftest.py
tests/clients/: test_tilda.py
tests/services/: test_top_posts.py
