[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "askbrain"
version = "0.1.0"
description = "Выгрузка топ-3 постов Tilda feeds"
authors = ["Team Askbrain <dev@askbrain.ru>"]
readme = "README.md"
packages = [{ include = "askbrain", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.2"
pydantic = "^2.8.2"
tenacity = "^9.0.0"
python-dotenv = "^1.0.1"
orjson = "^3.10.7"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
respx = "^0.21.1"

[tool.poetry.scripts]
askbrain-cli = "askbrain.cli:app"

[tool.pytest.ini_options]
pythonpath = ["src"]

